--- a/community.html
+++ b/community.html
@@ -49,6 +49,10 @@
         <img class="lozad lazyload col123" data-src="community/62-63.jpg">
         <img class="lozad lazyload col23" data-src="community/back.jpg">
     </div>
+<!-----------------------lightbox---------------------->
+<div id="lightbox">
+    <img class="lightbox-content" id="lightbox-img">
+</div>
 
         <div id="projfooter"></div>
 <!--------------------------end of project-specific code------------------------->
