--- a/fossora.html
+++ b/fossora.html
@@ -63,6 +63,11 @@
         <div class="caption col23">Featuring stills from atopos, directed by Vidar Logi and costumed by Burberry.</div>
     </div>
        
+    <!-----------------------lightbox---------------------->
+<div id="lightbox">
+    <img class="lightbox-content" id="lightbox-img">
+</div>
+
     <div id="projfooter"></div>
 <!--------------------------end of project-specific code------------------------->
 
