--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
     <meta property="og:image" content="assets/social_share2.png">
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
-    <title>Mikki Janower: Portfolio</title>
+    <title>Mikki Janower</title>
 </head>
 <body>
 <!--------------------------insert page-specific information in this section ONLY----------------------->
@@ -19,11 +19,10 @@
 
 <div class="listing" data-link="acuity.html">
     <h2 class="col1">Identity<br><span class="client">Acuity Scheduling</span></h2>
-    <!--<img class="lozad lazyload" data-src="acuity/AS_logo_gradient_thumbnail.gif">-->
     <video muted autoplay loop>
         <source src="acuity/AS_Screensaver_06.12.23.webm">
     </video>
-    <img class="lozad lazyload" data-src="acuity/Acuity-mockup-screen.webp">
+    <img src="acuity/Acuity-mockup-screen.webp">
 </div> 
 
 <div class="listing" data-link="fossora.html">
@@ -59,14 +58,14 @@
     <img class="lozad lazyload" data-src="spaceopera/spaceopera3-thumbnail.png">
 </div>
 
-<div class="listing" data-link="cyberotica.html">
-    <img class="lozad lazyload col12" data-src="cyberotica/jeong.jpg">
-    <h2><span class="col3">Cyberotica</span></h2>
-</div>
-
 <div class="listing" data-link="joshualeifer.html">
     <img class="lozad lazyload col12" data-src="joshualeifer/josh.gif">   
-    <h2><span class="client col3">Portfolio</span><br>Joshua Leifer</h2>
+    <h2>Portfolio<br><span class="client col3">Joshua Leifer</span></h2>
+</div>
+
+<div class="listing" data-link="cyberotica.html">
+    <img class="lozad lazyload col12" data-src="cyberotica/jeong.jpg">
+    <h2><span class="col3">Cyberotica</span><br><span class="client">Sam Fox School of Design</span></h2>
 </div>
 
 <div class="listing" data-link="reflections.html">
