--- a/joshualeifer.html
+++ b/joshualeifer.html
@@ -3,7 +3,7 @@
 <head><link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
 
-    <title>Mikki Janower: Portfolio, Joshua Leifer</title>
+    <title>Mikki Janower: Joshua Leifer</title>
     <meta property="og:image" content="joshualeifer/jleifer1.png">
 </head>
 
@@ -33,7 +33,13 @@
             <img class="lozad lazyload" data-src="joshualeifer/jleifer-07.png">
         </div>
 
-    </section>    
+    </section>  
+    
+<!-----------------------lightbox---------------------->
+<div id="lightbox">
+    <img class="lightbox-content" id="lightbox-img">
+</div>
+
     <div id="projfooter"></div>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
