--- a/leren.html
+++ b/leren.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
 
-    <title>Mikki Janower: Site and Identity, Le Ren</title>
+    <title>Mikki Janower: Le Ren</title>
     <meta property="og:image" content="mhns/mhns.png">
 </head>
 
@@ -32,6 +32,11 @@
     <img class="col23 lozad lazyload" data-src="leren/onscreen_footage.gif"> 
     <div class="col23 caption">Excerpts from a digital flyer listing Le Ren's 2021 tour dates.<span class="citation">Cinematography by Ali Van Der Kruyk</span></div>
 </section>
+
+<!-----------------------lightbox---------------------->
+<div id="lightbox">
+    <img class="lightbox-content" id="lightbox-img">
+</div>
 
     <div id="projfooter"></div>
 
