--- a/mhns.html
+++ b/mhns.html
@@ -63,6 +63,12 @@
      </div>
     <div class="col23 caption">Exhibition details from <i>Money Has No Smell</i><span class="citation">Photographs by Jenica Heintzelman</span></div>
 </section>
+
+<!-----------------------lightbox---------------------->
+<div id="lightbox">
+    <img class="lightbox-content" id="lightbox-img">
+</div>
+
     <div id="projfooter"></div>
 
 <!--------------------------end of project-specific code------------------------->
