--- a/postcursor.html
+++ b/postcursor.html
@@ -36,6 +36,12 @@
 
      
 </section>
+
+<!-----------------------lightbox---------------------->
+<div id="lightbox">
+    <img class="lightbox-content" id="lightbox-img">
+</div>
+
  <div id="projfooter"></div>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
