--- a/reflections.html
+++ b/reflections.html
@@ -40,8 +40,14 @@
         <img class="col123 lozad lazyload" data-src="reflections/IMG_6800-copy.jpg">
         <img class="col23 lozad lazyload" data-src="reflections/IMG_6576-copy.jpg">
 
-</section>       
-         <div id="projfooter"></div>
+</section>     
+
+<!-----------------------lightbox---------------------->
+<div id="lightbox">
+    <img class="lightbox-content" id="lightbox-img">
+</div>
+
+<div id="projfooter"></div>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
 
