--- a/spaceopera.html
+++ b/spaceopera.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
 
-    <title>Mikki Janower: Illustrations, The Baffler</title>
+    <title>Mikki Janower: The Baffler</title>
     <meta property="og:image" content="spaceopera/spaceopera1.jpeg">
 </head>
 <body>
@@ -27,6 +27,12 @@
    <!-- <div class="col23 caption">Illustration for 'Brussels or Bust', from vol. 67, <i>The National Interest</i>. Footage from Google Earth.</div>-->
 
 </section>
+
+<!-----------------------lightbox---------------------->
+<div id="lightbox">
+    <img class="lightbox-content" id="lightbox-img">
+</div>
+
 <div id="projfooter"></div>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
