--- a/tetragrammaton.html
+++ b/tetragrammaton.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
 
-    <title>Mikki Janower: Venn Diagramm</title>
+    <title>Mikki Janower: Tetragrammaton</title>
     <meta property="og:image" content="mhns/mhns.png">
 </head>
 
@@ -38,6 +38,11 @@
     </div>
 
     </div>
+
+<!-----------------------lightbox---------------------->
+<div id="lightbox">
+    <img class="lightbox-content" id="lightbox-img">
+</div>
        
     <div id="projfooter"></div>
 <!--------------------------end of project-specific code------------------------->
