--- a/venndiagramm.html
+++ b/venndiagramm.html
@@ -65,6 +65,11 @@
 
 <!----------closing div do not touch-->
     </div>
+
+<!-----------------------lightbox---------------------->
+<div id="lightbox">
+    <img class="lightbox-content" id="lightbox-img">
+</div>
        
     <div id="projfooter"></div>
 <!--------------------------end of project-specific code------------------------->
