--- a/acuity.html
+++ b/acuity.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
 
-    <title>Mikki Janower: Venn Diagramm</title>
+    <title>Mikki Janower: Acuity Scheduling</title>
     <meta property="og:image" content="mhns/mhns.png">
 </head>
 
@@ -100,6 +100,10 @@
 
 <!----end of gallery </div> tag — do not touch--------->
     </div>
+<!-----------------------lightbox---------------------->
+<div id="lightbox">
+    <img class="lightbox-content" id="lightbox-img">
+</div>
        
     <div id="projfooter"></div>
 <!--------------------------end of project-specific code------------------------->
