--- a/nytimes.html
+++ b/nytimes.html
@@ -66,6 +66,10 @@
     <div class="col23 caption"><span>Left: Jordan Gale. Right: Daniel Prakopcyk</span></div>
 
 </section>
+<!-----------------------lightbox---------------------->
+<div id="lightbox">
+    <img class="lightbox-content" id="lightbox-img">
+</div>
 
     <div id="projfooter"></div>
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
