--- a/acuity.html
+++ b/acuity.html
@@ -101,8 +101,11 @@
 <!----end of gallery </div> tag — do not touch--------->
     </div>
 <!-----------------------lightbox---------------------->
-<div id="lightbox">
-    <img class="lightbox-content" id="lightbox-img">
+<div id="lightbox" style="display:none;">
+    <img id="lightbox-img" style="display:none;">
+    <video id="lightbox-video" autoplay loop style="display:none;">
+        <source id="lightbox-source" src="">
+    </video>
 </div>
        
     <div id="projfooter"></div>
