--- a/leren.html
+++ b/leren.html
@@ -35,7 +35,10 @@
 
 <!-----------------------lightbox---------------------->
 <div id="lightbox">
-    <img class="lightbox-content" id="lightbox-img">
+    <div id="lightbox-content">
+        <img id="lightbox-img" style="display:none;">
+        <video id="lightbox-video" muted autoplay loop style="display:none;"></video>
+    </div>
 </div>
 
     <div id="projfooter"></div>
