--- a/community.html
+++ b/community.html
@@ -51,7 +51,10 @@
     </div>
 <!-----------------------lightbox---------------------->
 <div id="lightbox">
-    <img class="lightbox-content" id="lightbox-img">
+    <div id="lightbox-content">
+        <img id="lightbox-img" style="display:none;">
+        <video id="lightbox-video" muted autoplay loop style="display:none;"></video>
+    </div>
 </div>
 
         <div id="projfooter"></div>
