--- a/fossora.html
+++ b/fossora.html
@@ -64,9 +64,12 @@
     </div>
        
     <!-----------------------lightbox---------------------->
-<div id="lightbox">
-    <img class="lightbox-content" id="lightbox-img">
-</div>
+    <div id="lightbox">
+        <div id="lightbox-content">
+            <img id="lightbox-img" style="display:none;">
+            <video id="lightbox-video" muted autoplay loop style="display:none;"></video>
+        </div>
+    </div>
 
     <div id="projfooter"></div>
 <!--------------------------end of project-specific code------------------------->
