--- a/zz old/reconnatypeface.html
+++ b/zz old/reconnatypeface.html
@@ -55,8 +55,81 @@
         </script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
+<style>
+/*-----------------------non-universal changes for specific projects----------------*/
+/*---------------------------------reconna-------------------------*/
+#reconnatest{
+  position:relative;
+  display:inline-flex;
+  flex-direction:column;
+  margin-bottom:18px;
+}
+textarea {
+  overflow-y:scroll;
+  font-family: "Reconna";
+  font-size: 30px;
+  height:300px;
+  padding: 9px 12px 9px 12px;
+  border-radius:8px;
+  border: .6px solid rgba(0,0,0,.5);
+  resize: none;
+  outline:none;
+  transition:.3s;
+}
 
-    
+.sliderlabel{
+  position:relative;
+  width:75vw;
+  display:flex;
+  flex-direction:row;
+  justify-content:space-between;
+  margin-bottom:20px;
+}
+
+/*-------style slider*/
+#reconnatest input{
+  margin-top:10px;
+  cursor:pointer;
+  margin-bottom:6px;
+  background-color:transparent;
+  border:.6px solid rgba(0,0,0,.5);
+  border-radius: 8px;
+  height:8px;
+  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+}
+input:hover, input:active, input:focus, td:hover, td:focus, table:focus{
+  outline:none;
+  border:.6px solid rgba(0,0,0,.5);
+  box-shadow:none;
+  box-shadow: 0px 0px 0px transparent;
+  text-decoration:none;
+  background:transparent;
+  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+}
+input:focus::-webkit-slider-runnable-track {
+  background: transparent;
+  box-shadow:none;
+  -webkit-appearance:none;
+  outline:none;
+}
+input:focus::-ms-fill-upper {
+  box-shadow:none;
+  -webkit-appearance:none;
+  outline:none;
+}
+#reconnatest input::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width:30px;
+  height:8px;
+  background-color:rgba(0,0,0,.4);
+  border-radius:8px;
+}
+input::-ms-track {
+  cursor: pointer;
+  background-color: #0a0a0a;
+}
+</style>
+
     <script src="assets/jquery.min.js"></script>
     <script src="js/projects.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lozad"></script>
