fixes to videos?

--- a/acuity.html
+++ b/acuity.html
@@ -25,6 +25,7 @@
         <div class="video-wrapper col23">
             <video muted autoplay loop>
                 <source src="acuity/acuity-motion-logo-lockup.webm">
+                <source src="acuity/acuity-motion-logo-lockup.mp4">
             </video>
         </div>
         <div class="diptych col23">
