--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div class="listing" data-link="acuity.html">
     <h2 class="col1">Identity<br><span class="client">Acuity Scheduling</span></h2>
-    <video muted autoplay loop>
+    <video muted autoplay loop class="not-mobile">
         <source src="acuity/AS_Screensaver_06.12.23.webm">
     </video>
     <img src="acuity/Acuity-mockup-screen.webp">
