--- a/acuity.html
+++ b/acuity.html
@@ -37,22 +37,22 @@
 
 <!---------------------logo----------------------->
         <div class="spaced diptych col12">
-            <img class="lozad lazyload" data-src="acuity/Logo Construction.png">
-            <img class="lozad lazyload" data-src="acuity/Logo Clearspace.png">
+            <img class="lozad" data-src="acuity/Logo Construction.png">
+            <img class="lozad" data-src="acuity/Logo Clearspace.png">
         </div>
         <div class="col1 caption">Acuity's wordmark is set in all lowercase, confidently bisected by a colon. It evokes a digital clock or watch: modern interpreters of time.</div>
 
 <!---------------------typography----------------------->
         <div class="diptych col12">
-            <img class="lozad lazyload" data-src="acuity/Typographic System 2.webp">
-            <img class="lozad lazyload" data-src="acuity/Typographic System.png">
+            <img class="lozad" data-src="acuity/Typographic System 2.webp">
+            <img class="lozad" data-src="acuity/Typographic System.png">
         </div>
         <div class="col1 caption">Its typographic system pairs Clarkson — designed for the Squarespace brand ecosystem — with Recoleta, which lends its visual vocabulary a warm, conversational tone.</div>
 
 <!----------------------composition--------------------->
         <div class="diptych col12">
-            <img class="lozad lazyload" data-src="acuity/Composition System.webp">
-            <img class="lozad lazyload" data-src="acuity/Acuity_Guidelines_Composition_10.webp">
+            <img class="lozad" data-src="acuity/Composition System.webp">
+            <img class="lozad" data-src="acuity/Acuity_Guidelines_Composition_10.webp">
         </div>
         <div class="col12 caption">A layout system evoking calendar blocks adheres to a set construction process. A modular grid system dictates margins and columns. Events are placed on the grid and broken into blocks, then annotated with timestamps.</div>
 
@@ -66,21 +66,21 @@
         <div class="col23 caption">The Acuity colon evokes time in all of its forms: blinking like a clock face, orbiting like planets, or oscillating like pendulums.</div>
 
 <!---------------------photography----------------------->
-        <img class="lozad lazyload spaced col23 " data-src="acuity/115_E073_Acuity_Pet-Grooming_HERO_2034_03.webp">
+        <img class="lozad spaced col23 " data-src="acuity/115_E073_Acuity_Pet-Grooming_HERO_2034_03.webp">
         <div class="diptych col23">
-            <img class="lozad lazyload" data-src="acuity/123_E073_Acuity_Dancers_HERO_2754.webp">
-            <img class="lozad lazyload" data-src="acuity/126_E073_Acuity_Jogging_HERO_3351_02.webp">
+            <img class="lozad" data-src="acuity/123_E073_Acuity_Dancers_HERO_2754.webp">
+            <img class="lozad" data-src="acuity/126_E073_Acuity_Jogging_HERO_3351_02.webp">
         </div>
         <div class="col23 caption">Acuity photography surveys all kinds of bookable experiences. Appointments booked with Acuity are rendered without the hold music, paperwork, or waiting rooms — smooth and seamless.</div>
 
 <!---------------------applications----------------->
         <div class="diptych col23">
-            <img class="lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email1_Hero.webp">
-            <img class="lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email8_Hero.png">
+            <img class="lozad" data-src="acuity/F059_AcuityAttachedFlows_Email1_Hero.webp">
+            <img class="lozad" data-src="acuity/F059_AcuityAttachedFlows_Email8_Hero.png">
         </div>
         <div class="diptych col23">
-            <img class="lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email5_Hero.webp">
-            <img class="lozad lazyload" data-src="acuity/F059_AcuityAttachedFlows_Email7_Hero.webp">
+            <img class="lozad" data-src="acuity/F059_AcuityAttachedFlows_Email5_Hero.webp">
+            <img class="lozad" data-src="acuity/F059_AcuityAttachedFlows_Email7_Hero.webp">
         </div>
         <div class="video-wrapper col23">
             <video muted autoplay loop>
