--- a/fossora.html
+++ b/fossora.html
@@ -35,11 +35,11 @@
         </video>
     </div>
         <div class="diptych col12">
-            <img class="lozad lazyload" data-src="fossora/Mikki_Ancestress 2.jpg">
-            <img class="lozad lazyload" data-src="fossora/Mikki_Ancestress 3.jpg">
+            <img class="lozad" data-src="fossora/Mikki_Ancestress 2.jpg">
+            <img class="lozad" data-src="fossora/Mikki_Ancestress 3.jpg">
         </div>
         <div class="caption col3" style="align-self:end">Featuring stills and footage from ancestress, directed by Andrew Thomas Huang and costumed by Pier Paolo Piccioli for Valentino.</div>
-        <img class="lozad lazyload col23" data-src="fossora/Mikki_Ancestress 5.jpg">
+        <img class="lozadcol23" data-src="fossora/Mikki_Ancestress 5.jpg">
 
     <!----------------------Ovule---------------------------------->
         <div class="subhead col12">a2. ovule</div>
@@ -50,40 +50,34 @@
                     <source src="fossora/Mikki_Ovule-insitu-2.mp4">
                 </video>
             </div>
-            <img class="lozad lazyload col23" data-src="fossora/Mikki_Ovule 2.jpg"> 
+            <img class="lozad col23" data-src="fossora/Mikki_Ovule 2.jpg"> 
             <div class="diptych col23">
-                <img class="lozad lazyload" data-src="fossora/Mikki_Ovule 4.jpg">
-                <img class="lozad lazyload" data-src="fossora/Mikki_Ovule 7.jpg">
+                <img class="lozad" data-src="fossora/Mikki_Ovule 4.jpg">
+                <img class="lozad" data-src="fossora/Mikki_Ovule 7.jpg">
             </div>
-            <img class="col1 lozad lazyload" data-src="fossora/Mikki_Ovule 6.jpg"> 
-            <img class="col3 lozad lazyload" data-src="fossora/Mikki_Ovule 1.jpg">
+            <img class="col1 lozad" data-src="fossora/Mikki_Ovule 6.jpg"> 
+            <img class="col3 lozad" data-src="fossora/Mikki_Ovule 1.jpg">
 
-        <img class="lozad lazyload col1" data-src="fossora/Mikki_Ovule 5.jpg">
+        <img class="lozad col1" data-src="fossora/Mikki_Ovule 5.jpg">
         <div class="caption col1">Featuring stills and footage from ovule, directed by Nick Knight and costumed by Alessandro Michele for Gucci.</div>
         <div class="video-wrapper col23">
-            <video muted autoplay loop>
-                <source src="fossora/Mikki_Ovule-insitu-1.mp4">
-            </video>
+            <video muted autoplay loop class="lozad" data-src="fossora/Mikki_Ovule-insitu-1.mp4"></video>
         </div>
             <img class="col123" src="fossora/Mikki_Ovule 3.jpg"> 
     <!----------------------------Atopos--------------------------------->
         <div class="subhead col12">a1. atopos </div>
-            <img class="lozad lazyload col12" data-src="fossora/Mikki_Atopos 3.jpg">
+            <img class="lozad col12" data-src="fossora/Mikki_Atopos 3.jpg">
             <div class="caption col3" style="align-self:end">Featuring stills and footage from atopos, directed by Vidar Logi and costumed by Burberry.</div>
-            <img class="lozad lazyload col3" style="align-self:end" data-src="fossora/Mikki_Atopos 2.jpg">
+            <img class="lozad col3" style="align-self:end" data-src="fossora/Mikki_Atopos 2.jpg">
             <div class="video-wrapper col23">
-                <video muted autoplay loop>
-                    <source src="fossora/bjork-in-position.mp4">
-                </video>
+                <video muted autoplay loop class="lozad" data-src="fossora/bjork-in-position.mp4"></video>
             </div>
     <!------------------------------Sorrowful Soil------------------------------------->
     <div class="subhead col1">b4. sorrowful soil </div>
     <div class="caption col2">Featuring stills and footage from sorrowful soil, directed by Vidar Logi.</div>
-    <img class="lozad lazyload col3" data-src="fossora/Mikki_SorrowfulSoil 1.jpg">
+    <img class="lozad col3" data-src="fossora/Mikki_SorrowfulSoil 1.jpg">
     <div class="video-wrapper col123">
-       <video muted autoplay loop>
-            <source src="fossora/Mikki_SorrowfulSoil.mp4">
-        </video>
+       <video muted autoplay loop class="lozad" data-src="fossora/Mikki_SorrowfulSoil.mp4"></video>
     </div>
 
        
