--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
     <div class="diptych">
         <img src="fossora/Mikki_Ovule 8.jpg">
         <div class="video-wrapper">
-            <video muted autoplay loop>
-                <source src="fossora/Mikki_SorrowfulSoil.mp4">
-            </video>
+            <video muted autoplay loop src="fossora/Mikki_SorrowfulSoil.mp4"></video>
         </div>
     </div>
     <h3>fossora <span class="client">Squarespace x Björk</span></h3>
@@ -39,20 +37,17 @@
 <!--------------------------VennDiagramm----------------------->
 <section class="col123 new-listing" data-link="venndiagramm.html">
     <div class="diptych">
-        <img class="lozad lazyload" data-src="venndiagramm/CurioShop-15.jpg">
-        <img class="lozad lazyload" data-src="venndiagramm/FlimForum-Sidebyside.jpg">
+        <img class="lozad" data-src="venndiagramm/CurioShop-15.jpg">
+        <img class="lozad" data-src="venndiagramm/FlimForum-Sidebyside.jpg">
     </div>
     <h3>Publication Design <span class="client">Venn Diagramm</span></h3>
 </section>
 <!--------------------------Money Has No Smell----------------->
 <section class="col123 new-listing" data-link="mhns.html">
     <div class="diptych">
-        <img class="lozad lazyload" data-src="mhns/Mikki_MHNS 1.jpg">
+        <img class="lozad" data-src="mhns/Mikki_MHNS 1.jpg">
         <div class="video-wrapper">
-            <video muted autoplay loop>
-               <source src="mhns/mhns-flipbook.webm">
-               <source src="mhns/mhns-flipbook.mp4">
-            </video>
+            <video class="lozad" muted autoplay loop data-src="mhns/mhns-flipbook.mp4"></video>
         </div>
     </div>
     <h3>Money Has No Smell <span class="client">CUE Art Foundation</span></h3>
@@ -61,12 +56,9 @@
 <!--------------------------Tetragrammaton----------------------->
  <section class="col123 new-listing" data-link="tetragrammaton.html">
     <div class="diptych">
-        <img class="lozad lazyload" data-src="tetragrammaton/Inscreen_Laptop.jpg">
+        <img class="lozad" data-src="tetragrammaton/Inscreen_Laptop.jpg">
         <div class="video-wrapper">
-            <video muted autoplay loop>
-                <source src="tetragrammaton/tetragrammaton-logo-screen.webm">
-                <source src="tetragrammaton/tetragrammaton-logo-screen.mp4">
-            </video>
+            <video muted autoplay loop class="lozad" data-src="tetragrammaton/tetragrammaton-logo-screen.mp4"></video>
         </div>
     </div>
     <h3>Tetragrammaton <span class="client">Squarespace x Rick Rubin</span></h3>
@@ -74,8 +66,8 @@
  <!--------------------------Community----------------->
  <section class="col123 new-listing" data-link="community.html">
     <div class="diptych">
-        <img class="lozad lazyload" data-src="community/contents.jpg">
-        <img class="lozad lazyload" data-src="community/32-33.jpg">
+        <img class="lozad" data-src="community/contents.jpg">
+        <img class="lozad" data-src="community/32-33.jpg">
     </div>
 <h3>A Community is a Garden <span class="client">The Guggenheim</span></h3>
 </section>
@@ -83,15 +75,15 @@
  <!--------------------------The Baffler----------------------->
  <section class="col123 new-listing" data-link="spaceopera.html">
     <div class="diptych">
-        <img class="lozad lazyload" data-src="spaceopera/spaceopera1.png">
-        <img class="lozad lazyload" data-src="spaceopera/spaceopera3.png">
+        <img class="lozad" data-src="spaceopera/spaceopera1.png">
+        <img class="lozad" data-src="spaceopera/spaceopera3.png">
     </div>
     <h3>Illustration <span class="client">The Baffler</span></h3>
 </section>
 
  <!--------------------------NYT----------------------->
  <!--<section class="col12 new-listing" data-link="nytimes.html">
-    <img class="lozad lazyload" data-src="nytimes/nyt15.png">
+    <img class="lozadd" data-src="nytimes/nyt15.png">
     <h3>AD and Design <span class="client">The New York Times</span></h3>
 </section>-->
 
@@ -99,14 +91,10 @@
  <section class="col123 new-listing" style="align-self:end" data-link="joshualeifer.html">
     <div class="diptych">
         <div class="video-wrapper">
-         <video muted autoplay loop>
-            <source src="joshualeifer/landing-animation.mp4">
-         </video>
+         <video muted autoplay loop class="lozad" data-src="joshualeifer/landing-animation.mp4"></video>
         </div>
         <div class="video-wrapper">
-            <video muted autoplay loop>
-               <source src="joshualeifer/about-draggable.mp4">
-            </video>
+            <video muted autoplay loop class="lozad" data-src="joshualeifer/about-draggable.mp4"></video>
         </div>
     </div>
     <h3>Site <span class="client">Joshua Leifer</span></h3>
@@ -115,8 +103,8 @@
  <!--------------------------Cyberotica----------------------->
  <section class="col123 new-listing" data-link="cyberotica.html">
     <div class="diptych">
-        <img class="lozad lazyload" data-src="cyberotica/radicallove.jpg">
-        <img class="lozad lazyload" data-src="cyberotica/guiltymemory.jpg">
+        <img class="lozad" data-src="cyberotica/radicallove.jpg">
+        <img class="lozad" data-src="cyberotica/guiltymemory.jpg">
     </div>
     <h3>Cyberotica <span class="client">Sam Fox School of Design</span></h3>
 </section>
@@ -125,14 +113,10 @@
  <section class="col123 new-listing" style="align-self:end" data-link="archive.html">
     <div class="diptych">
         <div class="video-wrapper">
-         <video muted autoplay loop>
-            <source src="archive/Mikki_Leren-Homepage.mp4">
-         </video>
+            <video muted autoplay loop class="lozad" data-src="archive/Mikki_Leren-Homepage.mp4"></video>
         </div>
         <div class="video-wrapper">
-            <video muted autoplay loop>
-               <source src="archive/Mikki_mariovoid_gameover-op.mp4">
-            </video>
+            <video muted autoplay loop class="lozad" data-src="archive/Mikki_mariovoid_gameover-op.mp4"></video>
         </div> 
     </div>
     <h3>Archive & Experiments <span class="client">Various / Personal</span></h3>
