--- a/nytimes.html
+++ b/nytimes.html
@@ -24,44 +24,44 @@
     <div class="col23 subhead" style="margin-top:0px;">News Design</div>
     <div class="col23 caption">Select layouts for the New York Times.</div>
 
-    <img class="lozad lazyload col123" data-src="nytimes/missouri-guns.png">
+    <img class="lozad col123" data-src="nytimes/missouri-guns.png">
     <div class="col23 caption">"Inside Missouri's '2nd Amendment Sanctuary' Fight".<span class="citation">Words by Glenn Thrush</span></div>
 
-    <img class="col23 lozad lazyload" data-src="nytimes/nyt6.png">
+    <img class="col23 lozad" data-src="nytimes/nyt6.png">
     <div class="col23 caption">"Population: One".<span class="citation">Words and Photographs by Ruth Fremson</span></div>
            
-    <img class="lozad lazyload col23" data-src="nytimes/viljandi.png">
+    <img class="lozad col23" data-src="nytimes/viljandi.png">
     <div class="col23 caption">"A Town Bursting with Life, but Overlooked by Europe's Tourists".<span class="citation">Words and Photographs by Gabriel Leigh</span></div>
 
-    <img class="lozad lazyload col23" data-src="nytimes/blackvoters.png">
+    <img class="lozad col23" data-src="nytimes/blackvoters.png">
     <div class="col23 caption">"Black Voters Change the Look of Power in New York".<span class="citation">By Katie Glueck and Jeffery C. Mays</span></div>
 
-    <img class="col23 lozad lazyload" data-src="nytimes/nyt152.png">
+    <img class="col23 lozad" data-src="nytimes/nyt152.png">
     <div class="col23 caption">Obituary: Donald Rumsfeld.<span class="citation">Words by Robert D. McFadden</span></div>
 
-    <img class="col23 lozad lazyload" data-src="nytimes/powell-obit.png">
+    <img class="col23 lozad" data-src="nytimes/powell-obit.png">
     <div class="col23 caption">Obituary: Collin Powell.<span class="citation">Words by Eric Schmitt</span></div>
 
     <div class="col23 subhead">Art Direction: Sketchbook </div>
     <div class="col23 caption">On Saturdays and Sundays, the Times prints an installment of 'Sketchbook', a standalone, black and white art spot on page 3. Sketchbook asks illustrators and artists to respond to current events in a visually compelling way. </div>
-        <img class="col23 lozad lazyload" data-src="nytimes/powershift.png">
+        <img class="col23 lozad" data-src="nytimes/powershift.png">
         <br>
-        <img class="col23 lozad lazyload" data-src="nytimes/backandforth.png">
+        <img class="col23 lozad" data-src="nytimes/backandforth.png">
         <br>
-        <img class="col23 lozad lazyload" data-src="nytimes/petboom.png">
+        <img class="col23 lozad" data-src="nytimes/petboom.png">
         <br>
-        <img class="col23 lozad lazyload" data-src="nytimes/naturalselection.png">
+        <img class="col23 lozad" data-src="nytimes/naturalselection.png">
 
     <div class="col23 subhead">Art Direction: Times Insider</div>
     <div class="col23 caption">Times Insider delivers behind-the-scenes insights into how Times journalism comes together. Each day, a new installment can be found online and on page 2 of the print newspaper.</div>
     <div class="col23 diptych">
-        <img class="lozad lazyload" data-src="nytimes/poetryinsider_deep.jpg">
-        <img class="lozad lazyload" data-src="nytimes/stapleton.jpg">
+        <img class="lozad" data-src="nytimes/poetryinsider_deep.jpg">
+        <img class="lozad" data-src="nytimes/stapleton.jpg">
     </div>
     <div class="col23 caption"><span>Left: Antoine Cossé. Right: Holly Stapleton.</span></div>
     <div class="col23 diptych">
-        <img class="lozad lazyload" data-src="nytimes/assault.png">
-        <img class="lozad lazyload" data-src="nytimes/fike.png">
+        <img class="lozad" data-src="nytimes/assault.png">
+        <img class="lozad" data-src="nytimes/fike.png">
     </div>
     <div class="col23 caption"><span>Left: Jordan Gale. Right: Daniel Prakopcyk</span></div>
 
