--- a/joshualeifer.html
+++ b/joshualeifer.html
@@ -23,22 +23,19 @@
 
 
     <div class="video-wrapper col23">
-        <video muted autoplay loop>
-            <source src="joshualeifer/landing-animation.mp4">
-        </video>
+        <video muted autoplay loop src="joshualeifer/landing-animation.mp4"></video>
     </div>
     <div class="video-wrapper col23">
-        <video muted autoplay loop>
-            <source src="joshualeifer/about-draggable.mp4">
-        </video>
+        <video muted autoplay loop src="joshualeifer/about-draggable.mp4"></video>
     </div>
+
+     <div class="col23 diptych">
+            <img class="lozad" data-src="joshualeifer/Mikki_JoshLeifer 8.jpg">  
+            <img class="lozad" data-src="joshualeifer/Mikki_JoshLeifer 3.jpg">
+       </div>
         <div class="col23 diptych">
-            <img class="lozad lazyload" data-src="joshualeifer/Mikki_JoshLeifer 8.jpg">  
-            <img class="lozad lazyload" data-src="joshualeifer/Mikki_JoshLeifer 3.jpg">
-        </div>
-        <div class="col23 diptych">
-            <img class="lozad lazyload" data-src="joshualeifer/Mikki_JoshLeifer 4.jpg">  
-            <img class="lozad lazyload" data-src="joshualeifer/Mikki_JoshLeifer 1.jpg">
+            <img class="lozad" data-src="joshualeifer/Mikki_JoshLeifer 4.jpg">  
+            <img class="lozad" data-src="joshualeifer/Mikki_JoshLeifer 1.jpg">
         </div>
 
     </section>  
