--- a/tetragrammaton.html
+++ b/tetragrammaton.html
@@ -28,21 +28,15 @@
 
 <!---------------------motion------------------------>
 <div class="col12 video-wrapper">
-    <video muted autoplay loop>
-        <source src="tetragrammaton/tetragrammaton-logo-screen.mp4">
-    </video>
+    <video class="lozad" muted autoplay loop data-src="tetragrammaton/tetragrammaton-logo-screen.mp4"></video>
 </div>
 <div class="col3 caption nested right">We began by expanding Rick's existing Tetragrammaton wordmark into a broader, more flexible system. The shorthand logomark, shown here in Rick's Los Angeles studio, would become the cornerstone of the site.</div>
 <div class="diptych col12">
     <div class="video-wrapper">
-        <video muted autoplay loop>
-            <source src="tetragrammaton/RR_Homepage_Logo.mp4">
-        </video>
+        <video class="lozad" muted autoplay loop data-src="tetragrammaton/RR_Homepage_Logo.mp4"></video>
     </div>
     <div class="video-wrapper">
-        <video muted autoplay loop>
-            <source src="tetragrammaton/audiolines.mp4">
-        </video>
+        <video class="lozad" muted autoplay loop data-src="tetragrammaton/audiolines.mp4"></video>
     </div>
 </div>
 <div class="col3 caption nested" style="align-self:end;">We brought the identity to life with motion, highlighting the wordmark's simple geometric forms.</div>
@@ -52,13 +46,13 @@
 <div class="col1 caption">The site is ever-changing, its landing page spotlighting a new artwork each day. Its design, however, is pared down to a scaffolding, creating quiet spaces where content can speak and visitors can listen.</div>
 
 <div class="diptych col23">
-    <img class="lozad lazyload" data-src="tetragrammaton/Mikki_Tetragrammaton 2.png">
-    <img class="lozad lazyload" data-src="tetragrammaton/Mikki_Tetragrammaton 3.png">
+    <img class="lozad" data-src="tetragrammaton/Mikki_Tetragrammaton 2.png">
+    <img class="lozad" data-src="tetragrammaton/Mikki_Tetragrammaton 3.png">
 </div>
 
 <div class="diptych col23">
-    <img class="lozad lazyload" data-src="tetragrammaton/Mikki_Tetragrammaton 5.png">
-    <img class="lozad lazyload" data-src="tetragrammaton/Mikki_Tetragrammaton 4.png">
+    <img class="lozad" data-src="tetragrammaton/Mikki_Tetragrammaton 5.png">
+    <img class="lozad" data-src="tetragrammaton/Mikki_Tetragrammaton 4.png">
 </div>
 
 
