--- a/venndiagramm.html
+++ b/venndiagramm.html
@@ -21,8 +21,8 @@
         </div>
 
         <img class="col23" src="venndiagramm/FlimForum-Sidebyside.jpg">
-        <img class="col23 lozad lazyload" data-src="venndiagramm/FlimForum-2.jpg">
-        <img class="col23 lozad lazyload" data-src="venndiagramm/FlimForum-4.jpg">
+        <img class="col23 lozad" data-src="venndiagramm/FlimForum-2.jpg">
+        <img class="col23 lozad" data-src="venndiagramm/FlimForum-4.jpg">
         <div class="subhead col23">Flim Forum: Notes on Movies, 2023</div>  
 
         <img class="col12 spaced" src="venndiagramm/CurioShop-1.jpg">
@@ -31,33 +31,33 @@
             <img src="venndiagramm/CurioShop-29.jpg">
         </div>
         <div class="diptych col12">
-            <img class="lozad lazyload" data-src="venndiagramm/CurioShop-15.jpg">
-            <img class="lozad lazyload" data-src="venndiagramm/CurioShop-16.jpg">
+            <img class="lozad" data-src="venndiagramm/CurioShop-15.jpg">
+            <img class="lozad" data-src="venndiagramm/CurioShop-16.jpg">
         </div>
         <div class="diptych col12">
-            <img class="lozad lazyload" data-src="venndiagramm/CurioShop-5.jpg">
-            <img class="lozad lazyload" data-src="venndiagramm/CurioShop-6.jpg">
+            <img class="lozad" data-src="venndiagramm/CurioShop-5.jpg">
+            <img class="lozad" data-src="venndiagramm/CurioShop-6.jpg">
         </div>
         <div class="subhead col12">Curio Shop, 2023</div>
 
-        <img class="col23 lozad lazyload spaced" data-src="venndiagramm/WildPlace 1920x1280 1.jpg">
-        <img class="col23 lozad lazyload" data-src="venndiagramm/WildPlace 1920x1280 27.jpg">
-        <img class="col23 lozad lazyload" data-src="venndiagramm/WildPlace 1920x1280 17.jpg">
+        <img class="col23 lozad spaced" data-src="venndiagramm/WildPlace 1920x1280 1.jpg">
+        <img class="col23 lozad" data-src="venndiagramm/WildPlace 1920x1280 27.jpg">
+        <img class="col23 lozad" data-src="venndiagramm/WildPlace 1920x1280 17.jpg">
         <div class="diptych col23">
-            <img class="lozad lazyload" data-src="venndiagramm/WildPlace 1920x1280 24.jpg">
-            <img class="lozad lazyload" data-src="venndiagramm/WildPlace 1920x1280 29.jpg">
+            <img class="lozad" data-src="venndiagramm/WildPlace 1920x1280 24.jpg">
+            <img class="lozad" data-src="venndiagramm/WildPlace 1920x1280 29.jpg">
         </div>
         <div class="subhead col23">Arno Goetz: This is a Wild Place, 2023</div>
 
-        <img class="col12 lozad lazyload spaced" data-src="venndiagramm/GardenofEden 1920x1280 Layered.png">
-        <img class="col12 lozad lazyload" data-src="venndiagramm/GardenofEden 1920x1280 Layered-Back.png">
+        <img class="col12 lozad spaced" data-src="venndiagramm/GardenofEden 1920x1280 Layered.png">
+        <img class="col12 lozad" data-src="venndiagramm/GardenofEden 1920x1280 Layered-Back.png">
         <div class="diptych col12">
-            <img class="lozad lazyload" data-src="venndiagramm/GardenofEden 1920x1280 15.png">
-            <img class="lozad lazyload" data-src="venndiagramm/GardenofEden 1920x1280 17.png">
+            <img class="lozad" data-src="venndiagramm/GardenofEden 1920x1280 15.png">
+            <img class="lozad" data-src="venndiagramm/GardenofEden 1920x1280 17.png">
         </div>
         <div class="diptych col12">
-            <img class="lozad lazyload" data-src="venndiagramm/GardenofEden 1920x1280 1.png">
-            <img class="lozad lazyload" data-src="venndiagramm/GardenofEden 1920x1280 13.png">
+            <img class="lozad" data-src="venndiagramm/GardenofEden 1920x1280 1.png">
+            <img class="lozad" data-src="venndiagramm/GardenofEden 1920x1280 13.png">
         </div>
         <div class="subhead col12">Garden of Eden</div>
 
