fixing player sizer issues HOPEFULLY!

--- a/spaceopera.html
+++ b/spaceopera.html
@@ -23,7 +23,7 @@
 
     <img class="col23" src="spaceopera/spaceopera1.png"> 
    <!--- <div class="col23 caption">Cover art for vol. 61, <i>Space Opera</i>. Footage from the Apollo Missions.</div> -->
-    <img class="col23 lozad lazyload" data-src="spaceopera/spaceopera3.png">
+    <img class="col23 lozad" data-src="spaceopera/spaceopera3.png">
    <!-- <div class="col23 caption">Illustration for 'Brussels or Bust', from vol. 67, <i>The National Interest</i>. Footage from Google Earth.</div>-->
 
 
