--- a/acuity.html
+++ b/acuity.html
@@ -111,10 +111,12 @@
 
 
 <!-----------------------lightbox---------------------->
+<!-- Lightbox container -->
 <div id="lightbox" style="display:none;">
-    <img id="lightbox-img" style="display:none;">
-    <video id="lightbox-video" autoplay loop style="display:none;">
-        <source id="lightbox-source" src="">
+    <span class="close">&times;</span>
+    <img id="lightbox-img" style="display:none;" />
+    <video id="lightbox-video" controls style="display:none;">
+        <source id="lightbox-source" src="" />
     </video>
 </div>
        
