HOPEFULLY fixing playersizer issue!

--- a/tetragrammaton.html
+++ b/tetragrammaton.html
@@ -65,11 +65,14 @@
 
 
 <!-----------------------lightbox---------------------->
-<div id="lightbox">
-    <div id="lightbox-content">
-        <img id="lightbox-img" style="display:none;">
-        <video id="lightbox-video" muted autoplay loop style="display:none;"></video>
-    </div>
+
+<!-- Lightbox container -->
+<div id="lightbox" style="display:none;">
+    <span class="close">&times;</span>
+    <img id="lightbox-img" style="display:none;" />
+    <video id="lightbox-video" muted autoplay loop style="display:none;">
+        <source id="lightbox-source" src="" />
+    </video>
 </div>
        
     <div id="projfooter"></div>
