new attempt at video sizing

--- a/tetragrammaton.html
+++ b/tetragrammaton.html
@@ -56,7 +56,7 @@
 </div>
 
 
-<div class="col12 video-wrapper" id="player-wrapper">
+<div class="col12 video-wrapper" id="player-wrapper" style="height:auto">
     <!--<iframe id="player" width="100%" src="https://www.youtube-nocookie.com/embed/E2_Ma62GRhc?si=o613CNsLJTw7wdK0?amp;controls=0&autoplay=1&showinfo=0&modestbranding=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>-->
     <iframe id="player" width="100%" src="https://www.youtube.com/embed/E2_Ma62GRhc?si=o613CNsLJTw7wdK0?amp;controls=0&autoplay=1&showinfo=0&modestbranding=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
