--- a/acuity.html
+++ b/acuity.html
@@ -115,7 +115,7 @@
 <div id="lightbox" style="display:none;">
     <span class="close">&times;</span>
     <img id="lightbox-img" style="display:none;" />
-    <video id="lightbox-video" controls style="display:none;">
+    <video id="lightbox-video" autoplay mute loop style="display:none;">
         <source id="lightbox-source" src="" />
     </video>
 </div>
