--- a/community.html
+++ b/community.html
@@ -50,12 +50,15 @@
         <img class="lozad lazyload col23" data-src="community/back.jpg">
 
 <!-----------------------lightbox---------------------->
-<div id="lightbox">
-    <div id="lightbox-content">
-        <img id="lightbox-img" style="display:none;">
-        <video id="lightbox-video" muted autoplay loop style="display:none;"></video>
-    </div>
+<!-- Lightbox container -->
+<div id="lightbox" style="display:none;">
+    <span class="close">&times;</span>
+    <img id="lightbox-img" style="display:none;" />
+    <video id="lightbox-video" autoplay mute loop style="display:none;">
+        <source id="lightbox-source" src="" />
+    </video>
 </div>
+       
 
     <div id="projfooter"></div>
 </section>
