video fix in css

--- a/tetragrammaton.html
+++ b/tetragrammaton.html
@@ -56,16 +56,15 @@
 </div>
 
 
-<div class="col12 video-wrapper" id="player-wrapper" style="height:auto">
+<div class="col12 video-wrapper" id="player-wrapper">
     <!--<iframe id="player" width="100%" src="https://www.youtube-nocookie.com/embed/E2_Ma62GRhc?si=o613CNsLJTw7wdK0?amp;controls=0&autoplay=1&showinfo=0&modestbranding=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>-->
-    <iframe id="player" width="100%" src="https://www.youtube.com/embed/E2_Ma62GRhc?si=o613CNsLJTw7wdK0?amp;controls=0&autoplay=1&showinfo=0&modestbranding=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe id="player" src="https://www.youtube.com/embed/E2_Ma62GRhc?si=o613CNsLJTw7wdK0?amp;controls=0&autoplay=1&showinfo=0&modestbranding=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 <div class="col1 caption">Our <a href="https://collection.squarespace.com/rickrubin" target="_blank">campaign film</a>, shot in Rubin's Los Angeles studio, walks through his creative process and his vision for the Tetragrammaton ecosystem.</div>
 <div class="col2 caption">We also adapted our design to create a <a href="https://collection.squarespace.com/rickrubin" target="_blank">limited-edition Squarespace template</a> anyone can use. Learn more or try the template <a href="https://collection.squarespace.com/rickrubin" target="_blank">here</a>.</div>
 
 
 
-<!-----------------------lightbox---------------------->
 <!-----------------------lightbox---------------------->
 <!-- Lightbox container -->
 <div id="lightbox" style="display:none;">
