--- a/tetragrammaton.html
+++ b/tetragrammaton.html
@@ -30,7 +30,7 @@
 <div class="col12 video-wrapper">
     <video class="lozad" muted autoplay loop data-src="tetragrammaton/tetragrammaton-logo-screen.mp4"></video>
 </div>
-<div class="col3 caption nested right">We began by expanding Rick's existing Tetragrammaton wordmark into a broader, more flexible system. The shorthand logomark, shown here in Rick's Los Angeles studio, would become the cornerstone of the site.</div>
+<div class="col3 caption">We began by expanding Rick's existing Tetragrammaton wordmark into a broader, more flexible system. The shorthand logomark, shown here in Rick's Los Angeles studio, would become the cornerstone of the site.</div>
 <div class="diptych col12">
     <div class="video-wrapper">
         <video class="lozad" muted autoplay loop data-src="tetragrammaton/RR_Homepage_Logo.mp4"></video>
@@ -57,7 +57,6 @@
 
 
 <div class="col12 video-wrapper" id="player-wrapper">
-    <!--<iframe id="player" width="100%" src="https://www.youtube-nocookie.com/embed/E2_Ma62GRhc?si=o613CNsLJTw7wdK0?amp;controls=0&autoplay=1&showinfo=0&modestbranding=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>-->
     <iframe id="player" src="https://www.youtube.com/embed/E2_Ma62GRhc?si=o613CNsLJTw7wdK0?amp;controls=0&autoplay=1&showinfo=0&modestbranding=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 <div class="col1 caption">Our <a href="https://collection.squarespace.com/rickrubin" target="_blank">campaign film</a>, shot in Rubin's Los Angeles studio, walks through his creative process and his vision for the Tetragrammaton ecosystem.</div>
